Adding UTCI and capturing zip download #20

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ test-script.py
 /dist/
 
 # Python egg metadata, regenerated from source files by setuptools.
-/*.egg-info
+*.egg-info
+*/*.egg-info
 
 # Pycharm folder and temporary files
 /.idea
